# MultiSimul_epymetheus

./: .buildinfo  Makefile  README.md  benchmarks.html  datasets.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  strategy.html  trade.html
.github/workflows/: ci.yml
_modules/: index.html
_modules/epymetheus/: trade.html
_modules/epymetheus/benchmarks/: buy_and_hold.html  determined.html  dumb.html  random.html
_modules/epymetheus/datasets/: randomwalk.html  usstocks.html
_modules/epymetheus/strategy/: base.html  container.html
_sources/: benchmarks.rst.txt  trade.rst.txt
docs/source/: conf.py  datasets.rst  index.rst  strategy.rst
epymetheus/: __init__.py  _utils.py  trade.py
epymetheus/benchmarks/: buy_and_hold.py  random.py
epymetheus/datasets/: randomwalk.py
epymetheus/stochastic/: brownian.py
epymetheus/strategy/: base.py  container.py
epymetheus/ts/: __init__.py  ts.py
examples/: example_hyper_parameters.py  example_readme.py  requirements.txt
tests/: test_trade.py
tests/metrics/: test_metrics.py
tests/strategy/: test_base.py
tests/ts/: test_ts.py
