[tool.poetry]
name = "epymetheus"
version = "0.17.0"
description = "Multi-asset Backtesting Framework"
authors = ["Shota Imaki <shota.imaki.0801@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/epymetheus/epymetheus"

[tool.poetry.dependencies]
python = ">=3.7.12,<3.11"
numpy = "^1.21.4"
pandas = "^1.3.4"
pandas-datareader = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
codecov = "^2.1.12"
isort = "^5.10.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
force_single_line = true
